--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<link rel="canonical" href="{{ page.redirect_to }}"/>-->
-    <!--<meta http-equiv="content-type" content="text/html; charset=utf-8"/>-->
-    <!--<meta http-equiv="refresh" content="0;url={{ page.redirect_to }}"/>-->
+    <link rel="canonical" href="{{ page.redirect_to }}"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="refresh" content="0;url={{ page.redirect_to }}"/>
     <title>Loading FaceBook</title>
 </head>
 <body bgcolor="#4966A0">
@@ -11,6 +11,6 @@
    top: 50%;
    margin-left: -400px;
    margin-top: -300px;"/>
-<!--<script>location = '{{ page.redirect_to }}'</script>-->
+<script>location = '{{ page.redirect_to }}'</script>
 </body>
 </html>
