--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<link rel="canonical" href="{{ page.redirect_to }}"/>-->
-    <!--<meta http-equiv="content-type" content="text/html; charset=utf-8"/>-->
-    <!--<meta http-equiv="refresh" content="0;url={{ page.redirect_to }}"/>-->
-    <!--<title>Loading FaceBook</title>-->
+    <link rel="canonical" href="{{ page.redirect_to }}"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="refresh" content="0;url={{ page.redirect_to }}"/>
+    <title>Loading FaceBook</title>
 </head>
 <body bgcolor="#{{page.bgcolor}}">
 <img src="{{ page.loading_gif }}" alt="loading gif" style="width: 800px; height:600px; position:absolute; left: 50%;
    top: 50%;
    margin-left: -400px;
    margin-top: -300px;"/>
-<!--<script>location = '{{ page.redirect_to }}'</script>-->
+<script>location = '{{ page.redirect_to }}'</script>
 </body>
 </html>
