--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 			<h1>
 				<button type="button" class="open-nav" id="open-nav"></button>
 				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" height="40" alt="{{ site.title }} logo"></a>
+				<img src="images/profile.jpg" alt="Avatar" class="avatar">
 			</h1>
 
 			<form action="{{ site.baseurl }}/search/" method="get">
