--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -567,3 +567,10 @@ header {
 	margin: 30px 0 0 0;
 	display: none;
 }
+
+.avatar {
+	margin-top: 50px;
+	width: 75px;
+	height: 75px;
+	border-radius: 50%;
+}
