--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,10 +23,10 @@
     {% endfor %}
 	<div style="text-align: center">
     <img data-creepyface
-         src="img/serious.jpeg" data-src-hover="img/hover.jpeg"
-         data-src-look-0="img/0.jpeg" data-src-look-45="img/45.jpeg" data-src-look-90="img/90.jpeg"
-         data-src-look-135="img/135.jpeg" data-src-look-180="img/180.jpeg" data-src-look-225="img/225.jpeg"
-         data-src-look-270="img/270.jpeg" data-src-look-315="img/315.jpeg"
+         src="{{ site.baseurl }}/img/serious.jpeg" data-src-hover="{{ site.baseurl }}/img/hover.jpeg"
+         data-src-look-0="{{ site.baseurl }}/img/0.jpeg" data-src-look-45="{{ site.baseurl }}/img/45.jpeg" data-src-look-90="{{ site.baseurl }}/img/90.jpeg"
+         data-src-look-135="{{ site.baseurl }}/img/135.jpeg" data-src-look-180="{{ site.baseurl }}/img/180.jpeg" data-src-look-225="{{ site.baseurl }}/img/225.jpeg"
+         data-src-look-270="{{ site.baseurl }}/img/270.jpeg" data-src-look-315="{{ site.baseurl }}/img/315.jpeg"
          style="border-radius: 50%; width:100px; height:100px; object-fit: cover; margin-top: 50px; margin-bottom:auto">
 	</div>
 </div>
