--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -574,3 +574,16 @@ header {
 	height: 75px;
 	border-radius: 50%;
 }
+
+.fb_dialog.fb_dialog_advanced {
+	right: 18pt;
+	margin-right: 50px;
+}
+iframe.fb_customer_chat_bounce_in_v2 {
+	right: 9pt;
+	margin-right: 50px;
+}
+iframe.fb_customer_chat_bounce_out_v2 {
+	right: 9pt;
+	margin-right: 50px;
+}
